# adventofcode24

./: .gitignore  pyproject.toml
day_01/: main.py  test_day_01.py
day_02/: main.py  test_day_02.py
day_03/: main.py  test_day_03.py
day_04/: main.py  test_day_04.py
day_05/: main.py  test_day_05.py
day_06/: main.py  test_day_06.py
day_07/: main.py  test_day_07.py
day_08/: main.py  test_day_08.py
day_08/data/: output.txt
day_09/: main.py  test_day_09.py
