[tool.poetry]
name = "adventofcode24"
version = "0.1.0"
description = ""
authors = ["Max Pot <mpot@lely.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
loguru = "^0.7.2"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
